appId: "${APP_ID}"
name: "verificationAddressTestFlow"
# Suite: VerificationAddress
# Consolidated test flow for VerificationAddress screen
# Contains 25 test case(s):
---
- launchApp: {}
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "00571aad-bed9-46f5-991e-94d0805872a7"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "68526003-8aad-4122-8991-06771f332513"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "a2d65a31-9542-4b7e-9228-c730e6669899"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "aa76eab4-8026-480a-ba2a-91e5336db92c"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "2fa9b715-f553-440b-bf7d-519f8a12e053"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "c6323571-23da-4d1c-b075-a967be93ca2e"
    optional: true
# 1. Verify widget ASAppBar:VerificationAddress_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the widget:VerificationAddress_AppBar_AppBarAsappHeader_AppBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationAddress_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 2. Verify widget ASAppBar:VerificationAddress_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the label of widget:VerificationAddress_AppBar_AppBarAsappHeader_AppBar appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationAddress_AppBar_AppBarAsappHeader_AppBar"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationAddress_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 3. Verify widget ASText:VerificationAddress_Label_VerifyYourIdentity_Text is displayed on the screen: Verifies that the widget:VerificationAddress_Label_VerifyYourIdentity_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_VerifyYourIdentity_Text"
- waitForAnimationToEnd: {}
# 4. Verify widget ASText:VerificationAddress_Label_VerifyYourIdentity_Text is displayed on the screen: Verifies that the label of widget:VerificationAddress_Label_VerifyYourIdentity_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_VerifyYourIdentity_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_VerifyYourIdentity_Text"
- waitForAnimationToEnd: {}
# 5. Verify widget ASProgressBar:VerificationAddress_Container_ProgressBarAsprogr_ProgressBar is displayed on the screen: Verifies that the widget:VerificationAddress_Container_ProgressBarAsprogr_ProgressBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Container_ProgressBarAsprogr_ProgressBar"
- waitForAnimationToEnd: {}
# 6. Verify widget ASText:VerificationAddress_Label_ResidentialAddress_Text is displayed on the screen: Verifies that the widget:VerificationAddress_Label_ResidentialAddress_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_ResidentialAddress_Text"
- waitForAnimationToEnd: {}
# 7. Verify widget ASText:VerificationAddress_Label_ResidentialAddress_Text is displayed on the screen: Verifies that the label of widget:VerificationAddress_Label_ResidentialAddress_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_ResidentialAddress_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_ResidentialAddress_Text"
- waitForAnimationToEnd: {}
# 8. Verify widget ASText:VerificationAddress_Label_EnterYourResidentialAddress_Text is displayed on the screen: Verifies that the widget:VerificationAddress_Label_EnterYourResidentialAddress_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_EnterYourResidentialAddress_Text"
- waitForAnimationToEnd: {}
# 9. Verify widget ASText:VerificationAddress_Label_EnterYourResidentialAddress_Text is displayed on the screen: Verifies that the label of widget:VerificationAddress_Label_EnterYourResidentialAddress_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_EnterYourResidentialAddress_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_EnterYourResidentialAddress_Text"
- waitForAnimationToEnd: {}
# 10. Verify widget ASTextField:VerificationAddress_Input_MailingAddressLine1_Input is displayed on the screen: Verifies that the widget:VerificationAddress_Input_MailingAddressLine1_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine1_Input"
- waitForAnimationToEnd: {}
# 11. Verify widget ASTextField:VerificationAddress_Input_MailingAddressLine1_Input functionalities: Verifies that input widget:VerificationAddress_Input_MailingAddressLine1_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine1_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine1_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_MailingAddressLine1_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine1_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_MailingAddressLine1_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine1_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_MailingAddressLine1_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine1_Input"
- waitForAnimationToEnd: {}
# 12. Verify widget ASTextField:VerificationAddress_Input_MailingAddressLine2_Input is displayed on the screen: Verifies that the widget:VerificationAddress_Input_MailingAddressLine2_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine2_Input"
- waitForAnimationToEnd: {}
# 13. Verify widget ASTextField:VerificationAddress_Input_MailingAddressLine2_Input functionalities: Verifies that input widget:VerificationAddress_Input_MailingAddressLine2_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine2_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine2_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_MailingAddressLine2_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine2_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_MailingAddressLine2_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine2_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_MailingAddressLine2_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_MailingAddressLine2_Input"
- waitForAnimationToEnd: {}
# 14. Verify widget ASTextField:VerificationAddress_Input_Postalcode_Input is displayed on the screen: Verifies that the widget:VerificationAddress_Input_Postalcode_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_Postalcode_Input"
- waitForAnimationToEnd: {}
# 15. Verify widget ASTextField:VerificationAddress_Input_Postalcode_Input functionalities: Verifies that input widget:VerificationAddress_Input_Postalcode_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_Postalcode_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_Postalcode_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_Postalcode_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_Postalcode_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_Postalcode_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_Postalcode_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationAddress_Input_Postalcode_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationAddress_Input_Postalcode_Input"
- waitForAnimationToEnd: {}
# 16. Verify widget ASDropDown:VerificationAddress_Container_DropdownFieldAsdropDo_DropDown is displayed on the screen: Verifies that the widget:VerificationAddress_Container_DropdownFieldAsdropDo_DropDown renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDown"
- waitForAnimationToEnd: {}
# 17. Verify widget ASDropDown:VerificationAddress_Container_DropdownFieldAsdropDo_DropDown functionalities: Verifies that dropdown widget:VerificationAddress_Container_DropdownFieldAsdropDo_DropDown opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDown"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDown"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDown"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 18. Verify widget ASDropDown:VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2 is displayed on the screen: Verifies that the widget:VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2"
- waitForAnimationToEnd: {}
# 19. Verify widget ASDropDown:VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2 functionalities: Verifies that dropdown widget:VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2 opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationAddress_Container_DropdownFieldAsdropDo_DropDo_2"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 20. Verify widget ASImage:VerificationAddress_Image_GppGood_Image is displayed on the screen: Verifies that the widget:VerificationAddress_Image_GppGood_Image renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Image_GppGood_Image"
- waitForAnimationToEnd: {}
# 21. Verify widget ASText:VerificationAddress_Label_YourDataIsProtectedAccord_Text is displayed on the screen: Verifies that the widget:VerificationAddress_Label_YourDataIsProtectedAccord_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_YourDataIsProtectedAccord_Text"
- waitForAnimationToEnd: {}
# 22. Verify widget ASText:VerificationAddress_Label_YourDataIsProtectedAccord_Text is displayed on the screen: Verifies that the label of widget:VerificationAddress_Label_YourDataIsProtectedAccord_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_YourDataIsProtectedAccord_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationAddress_Label_YourDataIsProtectedAccord_Text"
- waitForAnimationToEnd: {}
# 23. Verify widget ASButton:VerificationAddress_Cta_Continue_Button is displayed on the screen: Verifies that the widget:VerificationAddress_Cta_Continue_Button renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- waitForAnimationToEnd: {}
# 24. Verify event:onPress using widget ASButton:VerificationAddress_Cta_Continue_Button in screen VerificationAddress should navigate to VerificationSelfie: Verify that triggering event:onPress using widget: VerificationAddress_Cta_Continue_Button in screen VerificationAddress correctly navigates to the next screen VerificationSelfie with all required fields filled beforehand.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "4c82546c-8aaf-4f78-8200-069e6ed2a930"
    optional: true
- waitForAnimationToEnd: {}
# 25. Navigate back after verifying event:onPress from ASButton:VerificationAddress_Cta_Continue_Button: This test case checks if the Navigate back after verifying event:onPress from ASButton:VerificationAddress_Cta_Continue_Button works correctly.
- runFlow:
    file: "common/backAndWait.yaml"
    env: {}
- waitForAnimationToEnd: {}
